day end commit
