# src/models/User.model.ts
@@ -1,11 +1,26 @@
 // models/User.ts
 import mongoose, { Schema, Document } from 'mongoose';
-import { IUser } from 'src/interfaces/UserRepositoryInterface';
+import { IUser } from '../interfaces/UserRepositoryInterface';
 
 const UserSchema: Schema = new Schema({
-    name: { type: String, required: true },
-    email: { type: String, required: true, unique: true },
-    password: { type: String, required: true }
+    name: {
+        type: String,
+        required: true
+    },
+    email: {
+        type: String,
+        required: true,
+        unique: true
+    },
+    role: {
+        type: String,
+        required: true,
+        enum: ['admin', 'user']
+    },
+    password: {
+        type: String,
+        required: true
+    }
 });
 
 export default mongoose.model<IUser>('User', UserSchema);
